@@ -2,14 +2,14 @@ package org.opentripplanner.routing.algorithm;
 
 import static org.opentripplanner.transit.model._data.TransitModelForTest.id;
 
-import java.util.Arrays;
 import java.util.Collection;
+import java.util.List;
 import org.junit.Assert;
 import org.junit.Test;
-import org.opentripplanner.model.Route;
 import org.opentripplanner.routing.api.request.RoutingRequest;
 import org.opentripplanner.transit.model._data.TransitModelForTest;
 import org.opentripplanner.transit.model.basic.FeedScopedId;
+import org.opentripplanner.transit.model.network.Route;
 import org.opentripplanner.transit.model.organization.Agency;
 
 /**
@@ -49,21 +49,14 @@ public class TestBanning {
     Assert.assertTrue(bannedRoutes.contains(id("RUT:Route:2")));
   }
 
-  private Collection<Route> getTestRoutes() {
-    Route route1 = new Route(id("RUT:Route:1"));
-    route1.setLongName("");
-    Route route2 = new Route(id("RUT:Route:2"));
-    route2.setLongName("");
-    Route route3 = new Route(id("RUT:Route:3"));
-    route3.setLongName("");
-
+  private List<Route> getTestRoutes() {
     Agency agency1 = TransitModelForTest.agency("A").copy().setId(id("RUT:Agency:1")).build();
     Agency agency2 = TransitModelForTest.agency("B").copy().setId(id("RUT:Agency:2")).build();
 
-    route1.setAgency(agency1);
-    route2.setAgency(agency1);
-    route3.setAgency(agency2);
-
-    return Arrays.asList(route1, route2, route3);
+    return List.of(
+      TransitModelForTest.route("RUT:Route:1").withAgency(agency1).build(),
+      TransitModelForTest.route("RUT:Route:2").withAgency(agency1).build(),
+      TransitModelForTest.route("RUT:Route:3").withAgency(agency2).build()
+    );
   }
 }
